# golem-resource-storage

./: .gitignore  Cargo.toml  README.md
bit-vec-serde/: Cargo.toml
bit-vec-serde/src/: lib.rs
merkle-tree/: Cargo.toml
merkle-tree/src/: error.rs  level.rs  lib.rs  tree.rs
merkle-tree/src/digest/: mod.rs  sha512.rs
merkle-tree/src/proof/: error.rs  mod.rs
src/: error.rs  lib.rs
src/service/: error.rs  mod.rs
src/service/storage/: message.rs  mod.rs
src/service/storage/map/: mod.rs  serialize.rs  version.rs
src/service/storage/router/: mod.rs
src/storage/: error.rs  iter.rs  mod.rs  resource.rs  shard.rs
src/storage/file/: resource.rs
src/storage/generic/: mod.rs  resource.rs
src/storage/map/: chunk.rs  error.rs  mod.rs
src/storage/tests/common/: handle.rs  mod.rs  resource.rs
src/storage/view/: mod.rs  uniform.rs
